# apis-instance-tbf

./: .gitignore  README.md  pyproject.toml
.github/: auto-deploy-values.yaml  dependabot.yml
.github/workflows/: deploy-app.yml  djlint-formatter.yml  djlint-linter.yml  gitlint.yml  ruff-formatter.yml  ruff-linter.yml
apis_ontology/: filtersets.py  forms.py  importers.py  models.py  querysets.py  settings.py  tables.py  typesense_collections.py  urls.py  utils.py
apis_ontology/api/tbit/: __init__.py  serializers.py  urls.py  views.py
apis_ontology/locale/de/LC_MESSAGES/: django.po
apis_ontology/management/commands/: __init__.py  add_languages_to_manifestations.py  create_tb.py  import_poster_data.py  import_translations_data.py  update_base_uri_uris.py
apis_ontology/migrations/: 0001_initial.py  0002_group_person_place_versiongroup_versionperson_and_more.py  0003_item_manifestation_versionitem_versionmanifestation.py  0004_workisrealisedinexpression_and_more.py  0005_manifestationembodiesexpression_and_more.py  0006_itemexemplifiesmanifestation_and_more.py  0007_event_versionevent.py  0008_personisauthorofwork_versionpersonisauthorofwork.py  0009_groupispublisherofmanifestation_and_more.py  0010_poster_versionposter.py  0011_alter_event_options_alter_versionevent_options.py  0012_alter_poster_label_alter_versionposter_label.py  0013_alter_event_label_alter_versionevent_label.py  0013_poster_height_poster_notes_poster_quantity_and_more.py  0014_alter_event_label_alter_versionevent_label.py  0014_poster_height_poster_notes_poster_quantity_and_more.py  0015_performance_versionperformance.py  0016_event_event_type_versionevent_event_type.py  0017_eventhadparticipantgroup_eventhadparticipantperson_and_more.py  0018_alter_event_event_type_alter_versionevent_event_type.py  0019_alter_poster_notes_alter_versionposter_notes.py  0020_poster_country_versionposter_country.py  0021_poster_year_versionposter_year.py  0022_remove_versionevent_self_contenttype_and_more.py  0023_alter_poster_quantity_alter_versionposter_quantity.py  0024_poster_signature_versionposter_signature.py  0025_performance_date_range_and_more.py  0026_event_date_range_event_date_range_date_from_and_more.py  0027_alter_event_date_range_date_from_and_more.py  0028_alter_group_options_alter_person_options_and_more.py  0029_alter_event_options_and_more.py  0030_alter_event_label_alter_performance_label_and_more.py  0031_alter_event_options_alter_expression_options_and_more.py  0032_remove_versionevent_version_tag_and_more.py  0033_alter_versioneventhadparticipantgroup_obj_object_id_and_more.py  0034_expression_other_title_information_and_more.py  0035_manifestation_isbn_manifestation_publication_date_and_more.py  0036_versionwork_tbit_category_work_tbit_category.py  0037_manifestation_tbit_id_versionmanifestation_tbit_id.py  0038_itemhaskeepergroup_versionitemhaskeepergroup.py  (+14 more)
apis_ontology/rdf_configs/: WorkFromDNB.toml  event.py  work.py
apis_ontology/rdfimport/: GroupFromWikidata.toml  PersonFromWikidata.toml  WorkFromDNB.toml
apis_ontology/templates/columns/: actions.html
apis_ontology/triple_configs/: EventFromDNB.toml  GroupFromDNB.toml  WorkFromDNB.toml
data/posters/: FTB_posters_initial_catalogue_refined.json  README.md
data/thomas-bernhard-in-translation/: README.md  publications.json  translations.json  translators.json  works.json
data/translations/: DATA_MAPPING.md  DATA_SUMMARY.md  README.md  publications.json  translations.json  translators.json  works.json
