[project]
name = "apis-instance-tbf"
version = "0.1.0"
description = "Thomas Bernhard online"
authors = [{ name = "K Kollmann", email = "dev-kk@oeaw.ac.at" }]
requires-python = ">=3.11"
dependencies = [
    "apis-acdhch-default-settings>=2.12.1,<3",
    "apis-core-rdf>=0.51.1,<0.52",
    "django-interval>=0.5.1,<0.6",
    "psycopg-binary>=3.2.9,<4",
    "psycopg>=3.2.9,<4",
]

[dependency-groups]
dev = [
    "deptry>=0.23.1,<0.24",
    "django-debug-toolbar>=6.0.0,<7",
    "djlint>=1.36.4,<2",
    "pylint>=3.3.8,<4",
    "ruff>=0.12.10,<0.13",
]
docs = [
    "myst-parser>=4.0.1,<5",
    "sphinx>=8.2.3,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["apis_ontology"]

[tool.hatch.build.targets.wheel]
include = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.djlint]
# djLint config options: https://www.djlint.com/docs/configuration/#options
indent=2
profile="django"
extension="html"
blank_line_before_tag="block,if"
blank_line_after_tag="endif,endblock"
ignore="H006"

[tool.ruff]
src = ["apis_ontology"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
# Ruff lint rules: https://docs.astral.sh/ruff/rules/
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle errors
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
]
# Rules conflicting with formatter:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E111", "E114", "E117", "E501", "F403", "W191"]

[tool.ruff.lint.isort]
known-first-party = ["apis_ontology"]

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["F405"]
"**/migrations/*" = ["I001"]
