[project]
name = "apis-instance-tbf"
version = "0.1.0"
description = "Thomas Bernhard online"
authors = [
    { name = "K Kollmann", email = "dev-kk@oeaw.ac.at" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apis-acdhch-default-settings>=2.15.0,<2.17",
    "apis-core-rdf>=0.56.4,<0.57",
    "django-interval>=0.5.1,<0.6",
    "django~=5.2",
    "psycopg-binary>=3.3.2,<3.4",
    "psycopg>=3.3.2,<3.4",
]

[dependency-groups]
dev = [
  {include-group = "helpers"},
  {include-group = "lint"},
]
docs = [
    "myst-parser>=4.0.1,<4.1",
    "sphinx>=8.2.3,<8.3",
    "sphinx-rtd-theme>=3.0.2,<3.1",
]
helpers = [
    "deptry>=0.24.0,<0.25",
    "django-debug-toolbar>=6.1.0,<6.2.0",
]
lint = [
    "djlint>=1.36.4,<1.37",
    "pylint>=4.0.2,<4.1",
    "ruff>=0.14.2,<0.15",
]

[tool.uv]
add-bounds = "minor"
resolution = "lowest-direct"

[tool.djlint]
# djLint config options: https://djlint.com/docs/configuration/#options
indent=2
profile="django"
extension="html"
blank_line_before_tag="block,if"
blank_line_after_tag="endif,endblock"
ignore="H006"

[tool.ruff]
src = ["apis_ontology"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
# Ruff lint rules: https://docs.astral.sh/ruff/rules/
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle errors
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
]
# Rules conflicting with formatter:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E111", "E114", "E117", "E501", "F403", "W191"]

[tool.ruff.lint.isort]
known-first-party = ["apis_ontology"]

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["F405"]
"**/migrations/*" = ["I001"]

[tool.hatch.build.targets.sdist]
include = [
    "/apis_ontology",
    "/data",
    ".gitignore",
    "manage.py",
    "pyproject.toml",
    "uv.lock"
]

[tool.hatch.build.targets.wheel]
include = [
    "/apis_ontology",
    "/data",
    ".gitignore",
    "manage.py",
    "pyproject.toml",
    "uv.lock"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
